# systemd-kcm

./: .reviewboardrc  CMakeLists.txt  Messages.sh  NEWS  README.md  config.h.cmake
cmake/modules/: CheckCxxFeatures.cmake  c++11-test-std-chrono-none.cpp
other/: CMakeLists.txt  kcm_systemd.desktop  settings-system-administration.desktop
src/: CMakeLists.txt  confdelegate.cpp  confdelegate.h  confmodel.cpp  confmodel.h  confoption.cpp  confoption.h  confparms.cpp  confparms.h  fsutil.cpp  fsutil.h  kcm-systemd-features.h.cmake  kcmsystemd.cpp  kcmsystemd.h  sortfilterunitmodel.cpp  sortfilterunitmodel.h  systemdunit.h  unitmodel.cpp  unitmodel.h
src/helper/: helper.cpp  helper.h  kcmsystemd.actions
ui/: kcmsystemd.ui
